# simple-programming-language

./: .gitignore  CMakeLists.txt  main.cpp
bytecode/: CMakeLists.txt  README.md  generate_antlr_classes.cmd  main.cpp
bytecode/grammar/: Smplang.g4  Smplang.interp  SmplangBaseListener.cpp  SmplangBaseListener.h  SmplangBaseVisitor.cpp  SmplangBaseVisitor.h  SmplangLexer.cpp  SmplangLexer.h  SmplangLexer.interp  SmplangLexer.tokens  SmplangListener.cpp  SmplangListener.h  SmplangParser.cpp  SmplangParser.h  SmplangVisitor.cpp  SmplangVisitor.h  syntax_example.txt
bytecode/include/: SmplangBaseListener.h  SmplangBaseVisitor.h  SmplangBytecodeVisitor.h  SmplangLexer.h  SmplangListener.h  SmplangParser.h  SmplangStructDeclVisitor.h  SmplangStructFuncNamePositionVisitor.h  SmplangStructFuncVisitor.h  SmplangThrowingErrorListener.h  SmplangVisitor.h  bytecodes.h  constant_folding.h  eof_fix.h  operation.h  operators.h  smplang_common.h  type_inference.h  variables_util.h
bytecode/src/: SmplangBaseListener.cpp  SmplangBaseVisitor.cpp  SmplangBytecodeVisitor.cpp  SmplangLexer.cpp  SmplangListener.cpp  SmplangParser.cpp  SmplangStructDeclVisitor.cpp  SmplangStructFuncNamePositionVisitor.cpp  SmplangStructFuncVisitor.cpp  SmplangThrowingErrorListener.cpp  SmplangVisitor.cpp  constant_folding.cpp
gc/: CMakeLists.txt  example.cpp  gc.cpp  gc.h
gc/lib/: CMakeLists.txt  gc.cpp  gc.h
include/: constant_folding.h  simple_programming_language.h
libs/: CMakeLists.txt
libs/multiprecision-1.79/: CMakeLists.txt
other_project/: CMakeLists.txt  main.cpp
parser/: CMakeLists.txt  README.md  main.cpp
parser/grammar/: SimpleLanguage.g4  Smplang.g4
parser/include/: SimpleLanguageBaseVisitor.h  SimpleLanguageLexer.h  SimpleLanguageParser.h  SimpleLanguageVisitor.h  SmplangBaseListener.h  SmplangLexer.h  SmplangListener.h  SmplangParser.h  SmplangVisitor.h
parser/src/: SimpleLanguageBaseVisitor.cpp  SimpleLanguageLexer.cpp  SimpleLanguageParser.cpp  SimpleLanguageVisitor.cpp  SmplangBaseListener.cpp  SmplangLexer.cpp  SmplangListener.cpp
tasks/: factorial.smpl  primes.smpl  simple_example.smpl  sort.smpl  sort2.smpl  test.smpl  tree_array.smpl  trees_struct.smpl
tests/: CMakeLists.txt  const_folding_tests.cpp  jit_tests.cpp  tests.cpp
vm/: .clang-format  .gitignore  CMakeLists.txt  CmakeLists.txt  bin.cpp  bytecodes.h  compiler_examples.cpp  gc.cpp  gc.h  main.cpp  type_index.h  types.cpp  types.h  vm.cpp  vm.h
